--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
       <header class="header">
         <nav>
           <ul class="header__links-list">
-            <li class="header__links-list-item header__links-list-item_no-bullit ">
-              <a class="header__link header__link_active" href="#main">Главная</a>
+            <li
+              class="header__links-list-item header__links-list-item_no-bullit"
+            >
+              <a class="header__link header__link_active" href="#main"
+                >Главная</a
+              >
             </li>
             <li class="header__links-list-item">
               <a class="header__link" href="#lots">Посмотреть лоты</a>
@@ -23,142 +27,177 @@
             <li class="header__links-list-item">
               <a class="header__link" href="#about">Об аукционе</a>
             </li>
-          </ul>   
+          </ul>
         </nav>
-          <a>
-          <img  class="header-logo" src="/images/logo-black.svg"  alt="logo">
+        <a>
+          <img class="header-logo" src="/images/logo-black.svg" alt="logo" />
         </a>
-        
+
         <div class="address header__address">
-          <a href="tel:+99995555555">+9 999 555 5555</a> 
+          <a href="tel:+99995555555">+9 999 555 5555</a>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          <address> наб. Принсенграхт 263- 265, Амстердам </address>
+          <address>наб. Принсенграхт 263- 265, Амстердам</address>
         </div>
       </header>
-  
+
       <main>
         <section id="main" class="cover">
-            <h1 class="cover__title">
-              <span class="aligned-text_left">Оно</span> 
-              <span class="aligned-text_center">тебе</span>
-              <span class="aligned-text_right">надо</span> 
-            </h1>
-            <div class="cover__description">
-              <span class="cover__description-text">
-                Аукцион вещей, вкоторые никто не верил
-              </span>
-              <button class="bet-button">Сделать ставку</button>
-            </div>
-
-            <div class="overlay"></div>
-        </section>
-  
-        <section id="lots" class="lots">
-            <h2 class="lots__heading section__title">Лоты</h2>
-            <ul class="lots__card-list">
-              <li class="card">
-                <a class="card-link">
-                  <article class="card card_type_film">
-                    <h3 class="card-header">
-                      Фильм режиссёра, который бросил киношколу
-                    </h3>
-                    <p class="card-text">
-                      Не просто бросил, а ушёл с первой лекции.
-                      Какой была бы ваша ставка, если бы вы не знали, 
-                      что режиссёр — Пол Томас Андерсон?
-                    </p>
-                    <div class="overlay"></div>
-                  </article>
-                </a>
-              </li>
-              <li class="card">
-                <a class="card-link">
-                  <article class="card card_type_book">
-                    <h3 class="card-header">
-                      Книга, где описан один скучный день из жизни рекламного агента
-                    </h3>
-                    <p class="card-text">
-                      Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
-                    </p>
-                    <div class="overlay"></div>
-                  </article>
-                </a>
-              </li>
-              <li class="card">
-                <a class="card-link">
-                  <article class="card card_type_picture">
-                    <h3 class="card-header">
-                      Картина, которую повторит даже 5-летний сын маминой подруги
-                    </h3>
-                    <p class="card-text">
-                      Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
-                    </p>
-                    <div class="overlay"></div>
-                  </article>
-                </a>
-              </li>
-            </ul>
-  
-            <a class="lots__look-more-link">Посмотреть больше</a>
-        </section>
-  
-        <section id="about" class="about" >
-          <div class="about__logo">
-            <img class="about__logo-image" src="/images/logo-white.svg" alt="icon">
+          <h1 class="cover__title">
+            <span class="aligned-text_left">Оно</span>
+            <span class="aligned-text_center">тебе</span>
+            <span class="aligned-text_right">надо</span>
+          </h1>
+          <div class="cover__description">
+            <span class="cover__description-text">
+              Аукцион вещей, вкоторые никто не верил
+            </span>
+            <button class="bet-button">Сделать ставку</button>
           </div>
 
-            <div class='about__summary'>
-              <h2 class="about__heading section__title">Об аукционе</h2>
+          <div class="overlay"></div>
+        </section>
 
-              <div class="about__description">
-                <p class="about__text">
-                  Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
-               <p class="about__text">
-                Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные    критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
-              </div>
-            </div>  
+        <section id="lots" class="lots">
+          <h2 class="lots__heading section__title">Лоты</h2>
+          <ul class="lots__card-list">
+            <li class="card">
+              <a class="card-link">
+                <article class="card card_type_film">
+                  <h3 class="card-header">
+                    Фильм режиссёра, который бросил киношколу
+                  </h3>
+                  <p class="card-text">
+                    Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                    ставка, если бы вы не знали, что режиссёр — Пол Томас
+                    Андерсон?
+                  </p>
+                  <div class="overlay"></div>
+                </article>
+              </a>
+            </li>
+            <li class="card">
+              <a class="card-link">
+                <article class="card card_type_book">
+                  <h3 class="card-header">
+                    Книга, где описан один скучный день из жизни рекламного
+                    агента
+                  </h3>
+                  <p class="card-text">
+                    Объёмом почти в тысячу страниц. Иногда без знаков препинания
+                    и с переходами на древнеанглийский. В ней одновременно
+                    рассказывается о 16 июня 1904 года и об истории литературы,
+                    начиная с античных времён. И это всё накладывается на
+                    эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                    Джеймса Джойса?
+                  </p>
+                  <div class="overlay"></div>
+                </article>
+              </a>
+            </li>
+            <li class="card">
+              <a class="card-link">
+                <article class="card card_type_picture">
+                  <h3 class="card-header">
+                    Картина, которую повторит даже 5-летний сын маминой подруги
+                  </h3>
+                  <p class="card-text">
+                    Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                    что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                    котиков... Сколько бы вы на такое поставили, если бы не
+                    знали, что это — одна из революционных работ Кандинского?
+                  </p>
+                  <div class="overlay"></div>
+                </article>
+              </a>
+            </li>
+          </ul>
+
+          <a class="lots__look-more-link">Посмотреть больше</a>
+        </section>
+
+        <section id="about" class="about">
+          <div class="about__logo">
+            <img
+              class="about__logo-image"
+              src="/images/logo-white.svg"
+              alt="icon"
+            />
+          </div>
+
+          <div class="about__summary">
+            <h2 class="about__heading section__title">Об аукционе</h2>
+
+            <div class="about__description">
+              <p class="about__text">
+                Здесь вы не встретите очередное пафосное собрание невероятно
+                дорогого антиквариата. Наши лоты вообще не должны были попасть
+                ни на один аукцион. Потому что кому нужен дневник
+                девочки-подростка или картина, которую может нарисовать даже
+                ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+              </p>
+              <p class="about__text">
+                Слишком сложные или, наоборот, слишком простые. Опережающие своё
+                время. В пух и прах растерзанные критиками. Непринятые и
+                непонятые. Когда-то они казались просто неудачными. Но, несмотря
+                на критику, кажущуюся простоту или сложность, сейчас без этих
+                лотов невозможно представить современную культуру. Когда в эти
+                вещи не верил никто, продолжали верить их создатели. И сейчас
+                эти лоты стали культовыми.
+              </p>
+            </div>
+          </div>
         </section>
       </main>
 
       <footer class="footer">
         <div class="address footer__addres">
-          <a href="tel:+99995555555">+9 999 555 5555</a> 
+          <a href="tel:+99995555555">+9 999 555 5555</a>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          <address> наб. Принсенграхт 263-265, Амстердам </address>
-      </div>
+          <address>наб. Принсенграхт 263-265, Амстердам</address>
+        </div>
 
-        <nav >
+        <nav>
           <ul class="footer__menu">
             <li>
               <a href="#main">Главная</a>
             </li>
 
-            <li >
+            <li>
               <a href="#lots">Посмотреть лоты</a>
             </li>
 
             <li>
-              <a href="#about">
-                Об аукционе
-              </a>
+              <a href="#about"> Об аукционе </a>
             </li>
           </ul>
         </nav>
-  
+
         <ul class="footer__social-list">
           <li>
             <a href="">
-              <img class="footer__social-icon" src="/images/yt.svg" alt="icon">
+              <img
+                class="footer__social-icon"
+                src="/images/yt.svg"
+                alt="icon"
+              />
             </a>
           </li>
           <li>
             <a href="">
-              <img class="footer__social-icon" src="/images/vk.svg" alt="icon">
+              <img
+                class="footer__social-icon"
+                src="/images/vk.svg"
+                alt="icon"
+              />
             </a>
           </li>
           <li>
             <a href="">
-              <img class="footer__social-icon" src="/images/pinterest.svg" alt="icon">
+              <img
+                class="footer__social-icon"
+                src="/images/pinterest.svg"
+                alt="icon"
+              />
             </a>
           </li>
         </ul>
