--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li
               class="header__links-list-item header__links-list-item_no-bullit"
             >
-              <a class="header__link header__link_active" href="#main"
+              <a class="header__link link_active" href="#main"
                 >Главная</a
               >
             </li>
@@ -30,27 +30,27 @@
           </ul>
         </nav>
         <a>
-          <img class="header-logo" src="/images/logo-black.svg" alt="logo" />
+          <img class="header-logo" src="./images/logo-black.svg" alt="Логотип страницы "Оно тебе надо"" />
         </a>
 
-        <div class="address header__address">
+        <address class="address header__address">
           <a href="tel:+99995555555">+9 999 555 5555</a>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          <address>наб. Принсенграхт 263- 265, Амстердам</address>
-        </div>
+         <p>наб. Принсенграхт 263- 265, Амстердам</p> 
+        </address>
       </header>
 
       <main>
         <section id="main" class="cover">
           <h1 class="cover__title">
             <span class="aligned-text_left">Оно</span>
-            <span class="aligned-text_center">тебе</span>
-            <span class="aligned-text_right">надо</span>
+            <span class="aligned-text_center">теб<span class="letter-spacing">е</span></span>
+            <span class="aligned-text_right">над<span class="letter-spacing">о</span></span>
           </h1>
           <div class="cover__description">
-            <span class="cover__description-text">
-              Аукцион вещей, вкоторые никто не верил
-            </span>
+            <p class="cover__description-text">
+              Аукцион вещей, в которые никто не верил
+            </p>
             <button class="bet-button">Сделать ставку</button>
           </div>
 
@@ -119,16 +119,16 @@
           <div class="about__logo">
             <img
               class="about__logo-image"
-              src="/images/logo-white.svg"
-              alt="icon"
+              src="./images/logo-white.svg"
+              alt="Логотип страницы "Оно тебе надо""
             />
           </div>
 
           <div class="about__summary">
             <h2 class="about__heading section__title">Об аукционе</h2>
 
-            <div class="about__description">
-              <p class="about__text">
+            <article class="about__description">
+              <p class="about__text about__text_with-padding">
                 Здесь вы не встретите очередное пафосное собрание невероятно
                 дорогого антиквариата. Наши лоты вообще не должны были попасть
                 ни на один аукцион. Потому что кому нужен дневник
@@ -144,30 +144,31 @@
                 вещи не верил никто, продолжали верить их создатели. И сейчас
                 эти лоты стали культовыми.
               </p>
-            </div>
+            </article>
           </div>
         </section>
       </main>
 
       <footer class="footer">
-        <div class="address footer__addres">
+        <address class="address footer__addres">
           <a href="tel:+99995555555">+9 999 555 5555</a>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          <address>наб. Принсенграхт 263-265, Амстердам</address>
-        </div>
+          <p>наб. Принсенграхт 263-265, Амстердам</p>
+        </address>  
+       
 
         <nav>
-          <ul class="footer__menu">
-            <li>
-              <a href="#main">Главная</a>
+          <ul class="footer__menu-list">
+            <li class="footer__menu-list-item">
+              <a class="link_active" href="#main">Главная</a>
             </li>
 
-            <li>
-              <a href="#lots">Посмотреть лоты</a>
+            <li class="footer__menu-list-item">
+              <a class="footer__link" href="#lots">Посмотреть лоты</a>
             </li>
 
-            <li>
-              <a href="#about"> Об аукционе </a>
+            <li class="footer__menu-list-item">
+              <a class="footer__link"  href="#about"> Об аукционе </a>
             </li>
           </ul>
         </nav>
@@ -177,8 +178,8 @@
             <a href="">
               <img
                 class="footer__social-icon"
-                src="/images/yt.svg"
-                alt="icon"
+                src="./images/yt.svg"
+                alt="Иконка сайта Ютуб"
               />
             </a>
           </li>
@@ -186,8 +187,8 @@
             <a href="">
               <img
                 class="footer__social-icon"
-                src="/images/vk.svg"
-                alt="icon"
+                src="./images/vk.svg"
+                alt="Иконка логотипа Вконтакте"
               />
             </a>
           </li>
@@ -195,8 +196,8 @@
             <a href="">
               <img
                 class="footer__social-icon"
-                src="/images/pinterest.svg"
-                alt="icon"
+                src="./images/pinterest.svg"
+                alt="Иконка логотипа пинтерест"
               />
             </a>
           </li>
