добавила комментарий к работе

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
             <li
               class="header__links-list-item header__links-list-item_no-bullit"
             >
-              <a class="header__link link_active" href="#main"
-                >Главная</a
-              >
+              <a class="header__link link_active" href="#main">Главная</a>
             </li>
             <li class="header__links-list-item">
               <a class="header__link" href="#lots">Посмотреть лоты</a>
@@ -30,13 +28,14 @@
           </ul>
         </nav>
         <a>
-          <img class="header-logo" src="./images/logo-black.svg" alt="Логотип страницы "Оно тебе надо"" />
+          <img class="header-logo" src="./images/logo-black.svg" alt="Логотип
+          страницы "Оно тебе надо"" />
         </a>
 
         <address class="address header__address">
           <a href="tel:+99995555555">+9 999 555 5555</a>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-         <p>наб. Принсенграхт 263- 265, Амстердам</p> 
+          <p>наб. Принсенграхт 263- 265, Амстердам</p>
         </address>
       </header>
 
@@ -44,8 +43,12 @@
         <section id="main" class="cover">
           <h1 class="cover__title">
             <span class="aligned-text_left">Оно</span>
-            <span class="aligned-text_center">теб<span class="letter-spacing">е</span></span>
-            <span class="aligned-text_right">над<span class="letter-spacing">о</span></span>
+            <span class="aligned-text_center"
+              >теб<span class="letter-spacing">е</span></span
+            >
+            <span class="aligned-text_right"
+              >над<span class="letter-spacing">о</span></span
+            >
           </h1>
           <div class="cover__description">
             <p class="cover__description-text">
@@ -117,11 +120,8 @@
 
         <section id="about" class="about">
           <div class="about__logo">
-            <img
-              class="about__logo-image"
-              src="./images/logo-white.svg"
-              alt="Логотип страницы "Оно тебе надо""
-            />
+            <img class="about__logo-image" src="./images/logo-white.svg"
+            alt="Логотип страницы "Оно тебе надо"" />
           </div>
 
           <div class="about__summary">
@@ -154,8 +154,7 @@
           <a href="tel:+99995555555">+9 999 555 5555</a>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
           <p>наб. Принсенграхт 263-265, Амстердам</p>
-        </address>  
-       
+        </address>
 
         <nav>
           <ul class="footer__menu-list">
@@ -168,7 +167,7 @@
             </li>
 
             <li class="footer__menu-list-item">
-              <a class="footer__link"  href="#about"> Об аукционе </a>
+              <a class="footer__link" href="#about"> Об аукционе </a>
             </li>
           </ul>
         </nav>
