--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
               <img
                 class="footer__social-icon"
                 src="./images/yt.svg"
-                alt="Иконка сайта Ютуб"
+                alt="Логотип социальной сети"
               />
             </a>
           </li>
@@ -187,7 +187,7 @@
               <img
                 class="footer__social-icon"
                 src="./images/vk.svg"
-                alt="Иконка логотипа Вконтакте"
+                alt="Логотип социальной сети"
               />
             </a>
           </li>
@@ -196,7 +196,7 @@
               <img
                 class="footer__social-icon"
                 src="./images/pinterest.svg"
-                alt="Иконка логотипа пинтерест"
+                alt="Логотип социальной сети"
               />
             </a>
           </li>
