--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <body>
     <div class="container">
       <header class="header">
-        <nav>
+        <nav class="header__menu">
           <ul class="header__links-list">
             <li
               class="header__links-list-item header__links-list-item_no-bullit"
             >
-              <a class="header__link link_active" href="#main">Главная</a>
+              <a class="header__link link__active" href="#main">Главная</a>
             </li>
             <li class="header__links-list-item">
               <a class="header__link" href="#lots">Посмотреть лоты</a>
@@ -29,7 +29,7 @@
         </nav>
         <a>
           <img class="header-logo" src="./images/logo-black.svg" alt="Логотип
-          страницы "Оно тебе надо"" />
+          страницы Оно тебе надо" />
         </a>
 
         <address class="address header__address">
@@ -124,10 +124,10 @@
             alt="Логотип страницы "Оно тебе надо"" />
           </div>
 
-          <div class="about__summary">
+          <article class="about__summary">
             <h2 class="about__heading section__title">Об аукционе</h2>
 
-            <article class="about__description">
+            <div class="about__description">
               <p class="about__text about__text_with-padding">
                 Здесь вы не встретите очередное пафосное собрание невероятно
                 дорогого антиквариата. Наши лоты вообще не должны были попасть
@@ -144,8 +144,8 @@
                 вещи не верил никто, продолжали верить их создатели. И сейчас
                 эти лоты стали культовыми.
               </p>
-            </article>
-          </div>
+            </div>
+          </article>
         </section>
       </main>
 
@@ -159,7 +159,7 @@
         <nav>
           <ul class="footer__menu-list">
             <li class="footer__menu-list-item">
-              <a class="link_active" href="#main">Главная</a>
+              <a class="footer__link link__active " href="#main">Главная</a>
             </li>
 
             <li class="footer__menu-list-item">
