исправила все ошибки валидатора

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <section id="about" class="about">
           <div class="about__logo">
             <img class="about__logo-image" src="./images/logo-white.svg"
-            alt="Логотип страницы "Оно тебе надо"" />
+            alt="Логотип страницы Оно тебе надо" />
           </div>
 
           <article class="about__summary">
