исправила ошибку в логотипе

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </ul>
         </nav>
         <a>
-          <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип cтраницы"/>
+          <img class="header-logo" src="./images/logo-black.svg" alt="Логотип cтраницы"/>
         </a>
 
         <address class="address header__address">
